--- a/src/style/Cards.css
+++ b/src/style/Cards.css
@@ -35,7 +35,7 @@
   font-family: Arial, Helvetica, sans-serif;
   color: hsl(0, 0%, 30%);
   margin: 0;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .add-to-cart {
@@ -54,4 +54,10 @@
   justify-items: center; /* Center-align cards horizontally */
   margin: 0 auto;
   padding: 20px;
+}
+.card .card-description {
+  font-family: Arial, Helvetica, sans-serif;
+  color: hsl(0, 0%, 30%);
+  margin: 0;
+  font-size: 15px;
 }
