--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: ui-monospace;
   font: antialiased;
 
-  background-image: url("./assets/background.png");
+  background-image: url("/public/assets/background.png");
   background-size: 100% auto;
   background-position: center;
   background-repeat: no-repeat;
